--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  android:id="@+id/main_graph">
+             xmlns:app="http://schemas.android.com/apk/res-auto"
+             android:id="@+id/main_graph"
+  app:startDestination="@id/firstFragment">
 
+  <fragment
+    android:id="@+id/firstFragment"
+    android:name="el.ka.weatherapp.ui.FirstFragment"
+    android:label="FirstFragment" />
 </navigation>
