--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,5 +12,17 @@
     <!-- Status bar color. -->
     <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
     <!-- Customize your theme here. -->
+    
+    <item name="android:textViewStyle">@style/text</item>
+  </style>
+
+  <style name="text" parent="android:Widget.TextView">
+    <item name="android:fontFamily">@font/montserrat_regular</item>
+    <item name="android:textColor">@color/second_color</item>
+  </style>
+
+  <style name="header2" parent="text">
+    <item name="android:textSize">16sp</item>
+    <item name="android:textColor">@color/primary_color_dark</item>
   </style>
 </resources>
