Create city fragment | add button for navigate to add city

--- a/app/src/main/res/layout/first_fragment.xml
+++ b/app/src/main/res/layout/first_fragment.xml
@@ -1,32 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:orientation="vertical"
-  android:paddingHorizontal="10dp"
-  android:paddingVertical="20dp">
+  android:paddingHorizontal="@dimen/app_horizontal_padding"
+  android:paddingVertical="@dimen/app_vertical_padding">
 
-  <TextView
-    style="@style/header2"
+  <LinearLayout
     android:layout_width="match_parent"
-    android:layout_marginBottom="5dp"
     android:layout_height="wrap_content"
-    android:text="@string/city" />
+    android:layout_marginBottom="5dp"
+    android:gravity="center_vertical"
+    android:orientation="horizontal">
+
+    <TextView
+      style="@style/header2"
+      android:layout_marginEnd="10dp"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="@string/city" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+      android:id="@+id/buttonAdd"
+      android:clickable="true"
+      android:focusable="true"
+      android:layout_width="25dp"
+      android:layout_height="25dp"
+      android:background="@drawable/button">
+
+      <ImageView
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:src="@drawable/ic_add"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/on_primary_color" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+  </LinearLayout>
 
   <Spinner
     android:id="@+id/spinnerCity"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:spinnerMode="dropdown"
-    tools:listitem="@layout/year_season_spinner_item" />
+    tools:listitem="@layout/spinner_item_with_icon" />
 
   <TextView
     style="@style/header2"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="5dp"
     android:layout_marginTop="20dp"
+    android:layout_marginBottom="5dp"
     android:text="@string/year_season" />
 
   <Spinner
@@ -34,51 +62,51 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:spinnerMode="dropdown"
-    tools:listitem="@layout/year_season_spinner_item" />
+    tools:listitem="@layout/spinner_item_with_icon" />
 
 
-    <LinearLayout
-      android:layout_marginTop="30dp"
-      android:layout_width="match_parent"
+  <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="30dp"
+    android:gravity="center"
+    android:orientation="vertical">
+
+    <TextView
+      style="@style/header2"
+      android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:gravity="center"
-      android:orientation="vertical">
+      android:text="@string/city_type" />
 
-      <TextView
-        style="@style/header2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="@string/city_type" />
-
-      <TextView
-        android:id="@+id/textViewCityType"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="Средний" />
-    </LinearLayout>
-
-    <LinearLayout
-      android:layout_marginTop="30dp"
-      android:layout_width="match_parent"
+    <TextView
+      android:id="@+id/textViewCityType"
+      android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      tools:text="Средний" />
+  </LinearLayout>
+
+  <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="30dp"
+    android:gravity="center"
+    android:orientation="vertical">
+
+    <TextView
+      style="@style/header2"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginHorizontal="10dp"
       android:gravity="center"
-      android:orientation="vertical">
+      android:text="@string/arg_tempr" />
 
-      <TextView
-        style="@style/header2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="10dp"
-        android:gravity="center"
-        android:text="@string/arg_tempr" />
-
-      <TextView
-        android:id="@+id/textViewArgTemperature"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="+13℃" />
-    </LinearLayout>
+    <TextView
+      android:id="@+id/textViewArgTemperature"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      tools:text="+13℃" />
+  </LinearLayout>
 
 
 </LinearLayout>
