--- a/app/src/main/res/layout/spinner_item_with_icon.xml
+++ b/app/src/main/res/layout/spinner_item_with_icon.xml
@@ -10,15 +10,16 @@
   android:paddingVertical="5dp">
 
   <ImageView
-    android:id="@+id/imageViewSeasonIcon"
+    android:id="@+id/imageViewIcon"
     android:layout_width="25dp"
+    android:contentDescription="@null"
     android:layout_height="25dp"
     android:layout_marginEnd="10dp"
     app:tint="@color/second_color"
     tools:src="@drawable/ic_summer" />
 
   <TextView
-    android:id="@+id/textViewSeasonValue"
+    android:id="@+id/textViewValue"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/summer" />
