--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -7,5 +7,13 @@
   <fragment
     android:id="@+id/firstFragment"
     android:name="el.ka.weatherapp.ui.FirstFragment"
-    android:label="FirstFragment" />
+    android:label="FirstFragment" >
+    <action
+      android:id="@+id/action_firstFragment_to_cityFragment"
+      app:destination="@id/cityFragment" />
+  </fragment>
+  <fragment
+    android:id="@+id/cityFragment"
+    android:name="el.ka.weatherapp.ui.CityFragment"
+    android:label="CityFragment" />
 </navigation>
