--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
   <color name="second_color">#333333</color>
   <color name="primary_color">#FA832A</color>
   <color name="primary_color_dark">#FF6720</color>
+  <color name="on_primary_color">#ffffff</color>
+
 </resources>
