--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,18 +2,25 @@
   <!-- Base application theme. -->
   <style name="Theme.WeatherApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
     <!-- Primary brand color. -->
-    <item name="colorPrimary">@color/purple_500</item>
-    <item name="colorPrimaryVariant">@color/purple_700</item>
-    <item name="colorOnPrimary">@color/white</item>
+    <item name="colorPrimary">@color/primary_color</item>
+    <item name="colorPrimaryVariant">@color/primary_color_dark</item>
+    <item name="colorOnPrimary">@color/on_primary_color</item>
     <!-- Secondary brand color. -->
-    <item name="colorSecondary">@color/teal_200</item>
-    <item name="colorSecondaryVariant">@color/teal_700</item>
-    <item name="colorOnSecondary">@color/black</item>
+    <item name="colorSecondary">@color/on_primary_color</item>
+    <item name="colorSecondaryVariant">@color/second_color</item>
+    <item name="colorOnSecondary">@color/primary_color_dark</item>
     <!-- Status bar color. -->
     <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
     <!-- Customize your theme here. -->
     
     <item name="android:textViewStyle">@style/text</item>
+    <item name="android:buttonStyle">@style/button</item>
+  </style>
+
+  <style name="button" parent="android:Widget.Button">
+    <item name="android:textSize">16sp</item>
+    <item name="android:fontFamily">@font/montserrat_regular</item>
+    <item name="android:textColor">@color/on_primary_color</item>
   </style>
 
   <style name="text" parent="android:Widget.TextView">
@@ -25,4 +32,5 @@
     <item name="android:textSize">16sp</item>
     <item name="android:textColor">@color/primary_color_dark</item>
   </style>
+
 </resources>
