--- a/app/src/main/res/layout/city_fragment.xml
+++ b/app/src/main/res/layout/city_fragment.xml
@@ -15,7 +15,7 @@
     android:hint="@string/city_name">
 
     <com.google.android.material.textfield.TextInputEditText
-      android:id="@+id/textViewCityName"
+      android:id="@+id/editTextViewCityName"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" />
   </com.google.android.material.textfield.TextInputLayout>
@@ -64,6 +64,7 @@
     tools:listitem="@layout/month_tempr_input_item" />
 
   <Button
+    android:id="@+id/buttonSave"
     android:layout_marginTop="20dp"
     style="@style/button"
     app:backgroundTint="@null"
