--- a/app/src/main/res/layout/month_tempr_input_item.xml
+++ b/app/src/main/res/layout/month_tempr_input_item.xml
@@ -12,6 +12,8 @@
 
   <com.google.android.material.textfield.TextInputEditText
     android:id="@+id/tempValue"
+    android:fontFamily="@font/montserrat_regular"
+    android:inputType="number|numberSigned"
     android:layout_width="match_parent"
     android:layout_height="wrap_content" />
 </com.google.android.material.textfield.TextInputLayout>
