--- a/app/src/main/res/layout/first_fragment.xml
+++ b/app/src/main/res/layout/first_fragment.xml
@@ -92,6 +92,21 @@
     android:spinnerMode="dropdown"
     tools:listitem="@layout/spinner_item_with_icon" />
 
+  <TextView
+    style="@style/header2"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="20dp"
+    android:layout_marginBottom="5dp"
+    android:text="@string/temp_type" />
+
+  <Spinner
+    android:id="@+id/spinnerTempType"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:spinnerMode="dropdown"
+    tools:listitem="@layout/spinner_item_with_icon" />
+
 
   <LinearLayout
     android:layout_width="match_parent"
